--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,20 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
-    <android.support.constraint.ConstraintLayout
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints">
+        android:layout_height="50dp"
+        android:background="@color/lightgray"
+        android:fontFamily="monospace"
+        android:gravity="center"
+        android:shadowColor="@color/lightgray"
+        android:text="NOTIFICATION"
+        android:textSize="22dp"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/delivererBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Deliverer" />
+
+        <Button
+            android:id="@+id/userBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="User" />
 
         <Button
             android:id="@+id/signOut"
             android:layout_width="wrap_content"
-            android:layout_height="49dp"
-            android:text="LOG OUT"
-            tools:layout_editor_absoluteX="148dp"
-            tools:layout_editor_absoluteY="272dp" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sign Out" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
