Map For Deliverer Implemented

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,47 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/lightgray"
-        android:fontFamily="monospace"
-        android:gravity="center"
-        android:shadowColor="@color/lightgray"
-        android:text="NOTIFICATION"
-        android:textSize="22dp"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textStyle="bold" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/customerBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="i want to order an item" />
 
         <Button
             android:id="@+id/delivererBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Deliverer" />
+            android:text="  i am ready to bring some item  " />
 
-        <Button
-            android:id="@+id/userBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="User" />
 
         <Button
             android:id="@+id/signOut"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sign Out" />
+            android:text="sign out" />
 
     </LinearLayout>
 
