--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -9,11 +9,10 @@
     tools:context=".Deliverer"
     android:orientation="vertical">
 
-        <Button
-            android:id="@+id/signOut"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:text="Sign Out"
-            android:layout_alignParentBottom="true"
-        />
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:text="Sign Out"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
