--- a/app/src/main/res/layout/activity_customer_map.xml
+++ b/app/src/main/res/layout/activity_customer_map.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +12,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="50dp"
-        tools:context=".DelivererMap" />
+        tools:context=".CustomerMap" />
 
     <RelativeLayout
         android:id="@+id/relLayout1"
@@ -39,7 +38,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:background="@null"
-            android:hint="       Where do you wanna go?"
+            android:hint="       From where you want the item?"
             android:imeOptions="actionSearch"
             android:textColor="#000"
             android:textSize="15sp" />
@@ -82,7 +81,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="update your location and your destination" />
+        android:text="next"/>
 </RelativeLayout>
 
 
