--- a/app/src/main/res/layout/activity_customer_wait.xml
+++ b/app/src/main/res/layout/activity_customer_wait.xml
@@ -6,15 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".CustomerWait">
 
-    <TextView
-        android:id="@+id/tfCWait"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="center"
-        android:text="TextView"
-        android:textSize="25dp"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="90dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/detailList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="sign out"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
