--- a/app/src/main/res/layout/activity_customer_wait.xml
+++ b/app/src/main/res/layout/activity_customer_wait.xml
@@ -53,6 +53,7 @@
             android:layout_marginRight="8dp"
             android:textSize="20dp"/>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,6 +73,10 @@
                 android:layout_weight="1"
                 android:text="reject" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
 
         <TextView
             android:id="@+id/random"
