Deliverer Wait Updated

--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="  Iem Name To Bring"
+            android:hint="  Item Name To Bring"
             android:inputType="textPersonName" />
 
         <EditText
